--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
         "@types/node": "^16.18.113",
         "@types/supertest": "^2.0.12",
         "copyfiles": "^2.4.1",
+        "cross-env": "^7.0.3",
         "jest": "^29.5.0",
+        "kill-port": "^2.0.1",
         "supertest": "^6.3.3",
         "ts-jest": "^29.0.5",
         "ts-node": "10.7.0",
@@ -71,6 +73,7 @@
         "qrcode": "^1.5.1",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.7",
-        "typeorm": "^0.3.20"
+        "typeorm": "^0.3.20",
+        "up-bi-4c-2024": "file:"
     }
 }
