--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "ts-jest": "^29.0.5",
         "ts-node": "10.7.0",
         "tslint": "^6.1.3",
-        "typescript": "4.5.2"
+        "typescript": "^5.7.2"
     },
     "dependencies": {
         "@types/crypto-js": "^4.2.0",
